Update more code to java 17