@@ -29,12 +29,10 @@ public abstract class MappingsRegistry {
         URL url = MappingConfiguration.class.getClassLoader().getResource("mappings/mappings.tiny");
 
         if (url != null) {
-            try {
-                URLConnection connection = url.openConnection();
-
-                VANILLA = MappingTreeHelper.readMappings(connection.getInputStream());
+            try (InputStream inputStream = url.openConnection().getInputStream()) {
+                VANILLA = MappingTreeHelper.readMappings(inputStream);
             } catch (IOException | ZipError e) {
-                throw new RuntimeException("Error reading "+url, e);
+                throw new RuntimeException("Error reading " + url, e);
             }
         } else {
             VANILLA = null;
@@ -69,13 +67,13 @@ public abstract class MappingsRegistry {
     }
 
     public void completeMappingsFromTr(TrEnvironment trEnvironment, String src) {
-        int srcNamespace = getFullMappings().getNamespaceId(src);
-        int trueSrcNamespace = getFullMappings().getNamespaceId(getFullMappings().getSrcNamespace());
-
-        Map<ExtendedClassMember, List<String>> classMembers = getClassMembers(trEnvironment, srcNamespace);
-
+        var srcNamespace = getFullMappings().getNamespaceId(src);
+        var trueSrcNamespace = getFullMappings().getNamespaceId(getFullMappings().getSrcNamespace());
+    
+        var classMembers = getClassMembers(trEnvironment, srcNamespace);
+    
         gatherChildClassCandidates(trEnvironment, classMembers);
-
+    
         try {
             getFullMappings().visitHeader();
             getFullMappings().visitNamespaces(getFullMappings().getSrcNamespace(), getFullMappings().getDstNamespaces());
@@ -83,8 +81,8 @@ public abstract class MappingsRegistry {
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-
-        int propagated = propagateMembers(trEnvironment, classMembers, srcNamespace, trueSrcNamespace);
+    
+        var propagated = propagateMembers(trEnvironment, classMembers, srcNamespace, trueSrcNamespace);
 
         Constants.MAIN_LOGGER.info("Propagated: " + propagated + " methods from namespace " + src);
     }
@@ -92,29 +90,27 @@ public abstract class MappingsRegistry {
     private int propagateMembers(TrEnvironment trEnvironment, Map<ExtendedClassMember, List<String>> classMembers, int srcNamespace, int trueSrcNamespace) {
         int propagated = 0;
 
-        for (Map.Entry<ExtendedClassMember, List<String>> entry : classMembers.entrySet()) {
-            ExtendedClassMember member = entry.getKey();
-
-            for (String child : entry.getValue()) {
-
-                TrClass trClass = trEnvironment.getClass(child);
+        for (var entry : classMembers.entrySet()) {
+            var member = entry.getKey();
+    
+            for (var child : entry.getValue()) {
+                var trClass = trEnvironment.getClass(child);
                 if (trClass == null) continue;
-
+    
                 if (srcNamespace == trueSrcNamespace) {
                     getFullMappings().visitClass(child);
                 } else {
                     getFullMappings().visitClass(getFullMappings().mapClassName(child, srcNamespace, trueSrcNamespace));
                 }
-
-                MappingTree.ClassMapping classMapping = getFullMappings().getClass(child, srcNamespace);
-
+    
+                var classMapping = getFullMappings().getClass(child, srcNamespace);
                 if (classMapping == null) continue;
-
-                TrMethod trMethod = trClass.getMethod(member.name, member.desc);
+    
+                var trMethod = trClass.getMethod(member.name, member.desc);
                 if (trMethod == null) continue;
-
+    
                 try {
-                    Boolean actualPropagated = tryPropagatingMember(srcNamespace, trueSrcNamespace, member, classMapping);
+                    var actualPropagated = tryPropagatingMember(srcNamespace, trueSrcNamespace, member, classMapping);
                     if (actualPropagated == null) continue;
 
                     if (actualPropagated) propagated++;
@@ -130,38 +126,38 @@ public abstract class MappingsRegistry {
         if (srcNamespace == trueSrcNamespace) {
             getFullMappings().visitMethod(member.name, member.desc);
         } else {
-            MappingTree.MemberMapping memberMapping = getFullMappings().getMethod(member.owner, member.name, member.desc, srcNamespace);
+            var memberMapping = getFullMappings().getMethod(member.owner, member.name, member.desc, srcNamespace);
             if (memberMapping == null) return null;
-
+    
             getFullMappings().visitMethod(memberMapping.getSrcName(), memberMapping.getSrcDesc());
-
+    
             getFullMappings().visitDstName(MappedElementKind.METHOD, srcNamespace, member.name);
             getFullMappings().visitDstDesc(MappedElementKind.METHOD, srcNamespace, member.desc);
         }
-
-        MappingTree.MethodMapping methodMapping = getFullMappings().getMethod(member.owner, member.name, member.desc, srcNamespace);
+    
+        var methodMapping = getFullMappings().getMethod(member.owner, member.name, member.desc, srcNamespace);
         if (methodMapping == null) return null;
-
-        MappingTree.MethodMapping newMethodMapping = classMapping.getMethod(member.name, member.desc, srcNamespace);
-
+    
+        var newMethodMapping = classMapping.getMethod(member.name, member.desc, srcNamespace);
+    
         boolean actualPropagated = false;
-
-        for (String namespace : getFullMappings().getDstNamespaces()) {
-            int targetNamespace = getFullMappings().getNamespaceId(namespace);
-
+    
+        for (var namespace : getFullMappings().getDstNamespaces()) {
+            var targetNamespace = getFullMappings().getNamespaceId(namespace);
+    
             if (targetNamespace == srcNamespace) continue;
-
+    
             if (newMethodMapping.getName(targetNamespace) == null) {
-                String targetName = methodMapping.getName(targetNamespace);
-
+                var targetName = methodMapping.getName(targetNamespace);
+    
                 if (targetName != null) {
                     getFullMappings().visitDstName(MappedElementKind.METHOD, targetNamespace, targetName);
                     actualPropagated = true;
                 }
             }
-
+    
             if (newMethodMapping.getDesc(targetNamespace) == null) {
-                String targetDesc = methodMapping.getDesc(targetNamespace);
+                var targetDesc = methodMapping.getDesc(targetNamespace);
 
                 if (targetDesc != null) {
                     getFullMappings().visitDstDesc(MappedElementKind.METHOD, targetNamespace, targetDesc);
@@ -174,47 +170,53 @@ public abstract class MappingsRegistry {
     }
 
     private Map<ExtendedClassMember, List<String>> getClassMembers(TrEnvironment trEnvironment, int srcNamespace) {
-        Map<ExtendedClassMember, List<String>> classMembers = new HashMap<>();
-
-        for (MappingTree.ClassMapping classMapping : getFullMappings().getClasses()) {
-            String className = classMapping.getName(srcNamespace);
-
-            TrClass trClass = trEnvironment.getClass(className);
-
+        var classMembers = new HashMap<ExtendedClassMember, List<String>>();
+    
+        for (var classMapping : getFullMappings().getClasses()) {
+            var className = classMapping.getName(srcNamespace);
+    
+            var trClass = trEnvironment.getClass(className);
+    
             if (trClass == null) continue;
-
-            List<String> children = trClass.getChildren().stream().map(TrClass::getName).collect(Collectors.toList());
-
-            for (MappingTree.MethodMapping methodMapping : classMapping.getMethods()) {
-                String methodName = methodMapping.getName(srcNamespace);
-                String methodDesc = methodMapping.getDesc(srcNamespace);
-
+    
+            var children = trClass.getChildren().stream()
+                    .map(TrClass::getName)
+                    .collect(Collectors.toList());
+    
+            for (var methodMapping : classMapping.getMethods()) {
+                var methodName = methodMapping.getName(srcNamespace);
+                var methodDesc = methodMapping.getDesc(srcNamespace);
+    
                 if (methodName == null || methodDesc == null) continue;
-
-                TrMethod method = trClass.getMethod(methodName, methodDesc);
-
+    
+                var method = trClass.getMethod(methodName, methodDesc);
+    
                 if (method != null && method.isVirtual()) {
                     classMembers.put(new ExtendedClassMember(
-                            methodMapping.getName(srcNamespace), methodMapping.getDesc(srcNamespace), className
+                            methodMapping.getName(srcNamespace),
+                            methodMapping.getDesc(srcNamespace),
+                            className
                     ), children);
                 }
             }
         }
-
+    
         return classMembers;
     }
-
+    
     private void gatherChildClassCandidates(TrEnvironment trEnvironment, Map<ExtendedClassMember, List<String>> classMembers) {
-        for (Map.Entry<ExtendedClassMember, List<String>> entry : classMembers.entrySet()) {
-            List<String> toAdd = new ArrayList<>(entry.getValue());
-
+        for (var entry : classMembers.entrySet()) {
+            var toAdd = new ArrayList<>(entry.getValue());
+    
             while (!toAdd.isEmpty()) {
-                TrClass trClass = trEnvironment.getClass(toAdd.remove(0));
+                var trClass = trEnvironment.getClass(toAdd.remove(0));
                 if (trClass == null) continue;
-
-                List<String> children = trClass.getChildren().stream().map(TrClass::getName).collect(Collectors.toList());
-
-                for (String child : children) {
+    
+                var children = trClass.getChildren().stream()
+                        .map(TrClass::getName)
+                        .toList();
+    
+                for (var child : children) {
                     if (!entry.getValue().contains(child)) {
                         toAdd.add(child);
                         entry.getValue().add(child);
